# Rasterizer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  report.md  screen_quad.fs  screen_quad.vs  test.cpp
3rd/: cmdparser.hpp
3rd/glad/include/glad/: glad.h
3rd/glad/src/: glad.c
include/: cmake_in  h_z_buf_ras.h  rasterizer.h  z_buf_ras.h
include/util/: FPS_camera.hpp  cube.inc  mesh.hpp  octree.hpp  shader.hpp  triangle.inc
src/: CMakeLists.txt
src/h_z_buf_ras/: impl.cpp  impl.h
src/ras/: impl.cpp  impl.h
src/s_h_z_buf_ras/: impl.cpp  impl.h
src/z_buf_ras/: impl.cpp  impl.h
